更新quickvo的加载方式，支持jdk9以上版本